--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.1.3",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-i18n": "^8.26.5",
     "vue-typed-js": "^0.1.2"
   },
   "devDependencies": {
